--- a/css/screen.css
+++ b/css/screen.css
@@ -457,3 +457,20 @@ padding-left:5px;
 padding-right:5px;
 }	
 		}
+    
+    @media screen and (max-width:340px){
+      
+        nav li {
+			position:static;
+			margin-top:190px;
+			padding:5px 5px;
+			margin-right:10px;
+			
+		}
+nav li a {
+font-size:0.7em;
+padding-left:5px;
+padding-right:5px;
+}	
+        
+    }
